Add GET & DELETE /session endpoints
