# backend/src/presentation/routes/session.route.js
@@ -4,6 +4,7 @@ const sessionController = require('../../controllers/session.controller');
 const createSessionSchema = require('../schemas/sessionCreate');
 const validate = require('../middleware/validate');
 
-router.post('/sessions', validate(createSessionSchema), sessionController.createSession);
-
+router.post('/session', validate(createSessionSchema), sessionController.createSession);
+router.get('/session', sessionController.getCurrentSesssion);
+router.delete('/session', sessionController.deleteSession);
 module.exports = router;
